[tool.poetry]
name = "algo-grokking-algorithm-2nd-ed"
version = "0.1.0"
description = ""
authors = ["Wahidyan Kresna Fridayoka <wahidyankf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
