[tool.poetry]
name = "algo-grokking-algorithm-2nd-ed"
version = "0.1.0"
description = ""
authors = ["Wahidyan Kresna Fridayoka <wahidyankf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
