[tool.poetry]
name = "algo-grokking-algorithm-2nd-ed"
version = "0.1.0"
description = ""
authors = ["Wahidyan Kresna Fridayoka <wahidyankf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
